[package]
name = "resonance"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "resonance"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
md-5 = "0.10"
subtle = "2"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
